--- a/index.html
+++ b/index.html
@@ -6,18 +6,30 @@
     <title>Team Hackz - Elite CODM eSports Team</title>
     <meta name="description" content="Home of Team Hackz - Mora Esports" />
     <meta name="author" content="Team Hackz" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <meta property="og:title" content="Team Hackz - Elite CODM eSports Team" />
-    <meta property="og:description" content="Elite Call of Duty: Mobile eSports team. Precision. Power. Domination." />
+    <meta
+      property="og:description"
+      content="Elite Call of Duty: Mobile eSports team. Precision. Power. Domination."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
