--- a/index.html
+++ b/index.html
@@ -19,17 +19,11 @@
       content="Elite Call of Duty: Mobile eSports team. Precision. Power. Domination."
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta property="og:image" content="/src/assets/team-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta name="twitter:image" content="/src/assets/team-logo.png" />
   </head>
 
   <body>
