--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Team Hackz - Elite CODM eSports Team</title>
+    <title>Team Hackz - Mora CODM eSports Team</title>
     <meta name="description" content="Home of Team Hackz - Mora Esports" />
     <meta name="author" content="Team Hackz" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,16 +13,15 @@
       rel="stylesheet"
     />
 
-    <meta property="og:title" content="Team Hackz - Elite CODM eSports Team" />
+    <meta property="og:title" content="Home of Team Hackz" />
     <meta
       property="og:description"
-      content="Elite Call of Duty: Mobile eSports team. Precision. Power. Domination."
+      content="Call of duty Mobile - Mora Esports"
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/src/assets/team-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="/src/assets/team-logo.png" />
   </head>
 
