reword sub descriptions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Home of Team Hackz" />
     <meta
       property="og:description"
-      content="Call of duty Mobile - Mora Esports"
+      content="Call of Duty Mobile - Mora Esports"
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/src/assets/team-logo.png" />
